internet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internet-ingress
  annotations:
    nginx.org/redirect-to-https: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /admin/argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  - http:
      paths:
      - path: /admin/argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
